# telecom_churn

./: .gitignore  LICENSE.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/processed/: predictions.xlsx  test.csv  train.csv
notebooks/: eda.ipynb  modeling.ipynb
scr/: data_preprocessing.py  evaluate_model.py  predict.py  train_model.py  utils.py
