[project]
name = "telecom-churn"
version = "0.1.0"
description = ""
authors = [
    {name = "datalopes1",email = "datalopes@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (==1.26.4)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "catboost (>=1.2.7,<2.0.0)",
    "streamlit (>=1.43.1,<2.0.0)",
    "category-encoders (>=2.8.0,<3.0.0)",
    "feature-engine (>=1.8.3,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"